Combine new API into old one and update code to use it.